[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/start.png" type="Texture" id=1]
[ext_resource path="res://assets/CAJA MEGA GOOD CON COMPLEJO DE CAPTURA DE PANTALLA.png" type="Texture" id=2]
[ext_resource path="res://assets/start2.png" type="Texture" id=3]
[ext_resource path="res://scenes/Da√±oAtaqueCaja1.gd" type="Script" id=4]
[ext_resource path="res://SpritesMapa1.tres" type="TileSet" id=5]
[ext_resource path="res://scenes/AtaqueRobot2Nivel1.gd" type="Script" id=6]
[ext_resource path="res://assets/AtaquePinzaRobotChiquito.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 0.01

[node name="AtaqueRobot2Nivel1" type="Node2D"]
position = Vector2( 352, 160 )
script = ExtResource( 6 )

[node name="caja1" type="RigidBody2D" parent="."]
position = Vector2( 776, -352 )

[node name="Node2D" type="Node2D" parent="caja1" groups=["enemigo"]]
position = Vector2( 72, 344 )
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja1/Node2D"]
position = Vector2( -1562.52, 50.9961 )
rotation = -3.14159
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja1/Node2D"]
position = Vector2( 5.5, -74.5001 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja1/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="caja2" type="RigidBody2D" parent="."]
position = Vector2( 600, 72 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja2" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja2/Node2D"]
position = Vector2( -1568.52, -43.0038 )
rotation = -3.14159
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja2/Node2D"]
position = Vector2( -0.5, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja2/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="caja3" type="RigidBody2D" parent="."]
position = Vector2( 696, -40 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja3" groups=["enemigo"]]
position = Vector2( 248, 272 )
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja3/Node2D"]
position = Vector2( -470.757, -131 )
rotation = -3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja3/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja3/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="caja4" type="RigidBody2D" parent="."]
position = Vector2( 1072, 160 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja4" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja4/Node2D"]
position = Vector2( -1568.52, -43.0038 )
rotation = -3.14159
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja4/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja4/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="caja5" type="RigidBody2D" parent="."]
position = Vector2( 568, 232 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja5" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja5/Node2D"]
position = Vector2( -470.757, -131 )
rotation = -3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja5/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja5/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="caja6" type="RigidBody2D" parent="."]
position = Vector2( 1584, 88 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja6" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja6/Node2D"]
position = Vector2( -1568.52, -43.0038 )
rotation = -3.14159
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja6/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja6/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="caja7" type="RigidBody2D" parent="."]
position = Vector2( 1384, 224 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja7" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja7/Node2D"]
position = Vector2( -1568.52, -43.0038 )
rotation = -3.14159
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja7/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja7/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="caja8" type="RigidBody2D" parent="."]
position = Vector2( 1200, 88 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja8" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja8/Node2D"]
position = Vector2( -470.757, -131 )
rotation = -3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja8/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja8/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="caja9" type="RigidBody2D" parent="."]
position = Vector2( 1880, 184 )
gravity_scale = 0.0

[node name="Node2D" type="Node2D" parent="caja9" groups=["enemigo"]]
script = ExtResource( 4 )

[node name="caja" type="Sprite" parent="caja9/Node2D"]
position = Vector2( -470.757, -131 )
rotation = -3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
offset = Vector2( -156.752, 12.5 )
flip_h = true

[node name="AreaCaja" type="Area2D" parent="caja9/Node2D"]
position = Vector2( -0.500031, -168.5 )
scale = Vector2( 6, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="caja9/Node2D/AreaCaja"]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Controles" type="CanvasLayer" parent="."]
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )

[node name="Piso" type="TileMap" parent="Controles"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 117.333, 53.3333 )
scale = Vector2( 0.133, 0.133 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589834, -1073741684, 0, -589833, -1073741684, 0, -589832, -1073741684, 0, -589831, -1073741684, 0, -589830, -1073741684, 0, -589829, -1073741684, 0, -589828, -1073741684, 0, -589827, -1073741684, 0, -589826, -1073741684, 0, -589825, -1073741684, 0, -655360, -1073741684, 0, -655359, -1073741684, 0, -655358, -1073741684, 0, -655357, -1073741684, 0, -655356, -1073741684, 0, -655355, -1073741684, 0, -655354, -1073741684, 0, -655353, -1073741684, 0, -655352, -1073741684, 0, -655351, -1073741684, 0, -524298, -1073741684, 0, -524297, -1073741684, 0, -524296, -1073741684, 0, -524295, -1073741684, 0, -524294, -1073741684, 0, -524293, -1073741684, 0, -524292, -1073741684, 0, -524291, -1073741684, 0, -524290, -1073741684, 0, -524289, -1073741684, 0, -589824, -1073741684, 0, -589823, -1073741684, 0, -589822, -1073741684, 0, -589821, -1073741684, 0, -589820, -1073741684, 0, -589819, -1073741684, 0, -589818, -1073741684, 0, -589817, -1073741684, 0, -589816, -1073741684, 0, -589815, -1073741684, 0, -458762, -1073741684, 0, -458761, -1073741684, 0, -458760, -1073741684, 0, -458759, -1073741684, 0, -458758, -1073741684, 0, -458757, -1073741684, 0, -458756, -1073741684, 0, -458755, -1073741684, 0, -458754, -1073741684, 0, -458753, -1073741684, 0, -524288, -1073741684, 0, -524287, -1073741684, 0, -524286, -1073741684, 0, -524285, -1073741684, 0, -524284, -1073741684, 0, -524283, -1073741684, 0, -524282, -1073741684, 0, -524281, -1073741684, 0, -524280, -1073741684, 0, -524279, -1073741684, 0, -393226, -1073741684, 0, -393225, -1073741684, 0, -393224, -1073741684, 0, -393223, -1073741684, 0, -393222, -1073741684, 0, -393221, -1073741684, 0, -393220, -1073741684, 0, -393219, -1073741684, 0, -393218, -1073741684, 0, -393217, -1073741684, 0, -458752, -1073741684, 0, -458751, -1073741684, 0, -458750, -1073741684, 0, -458749, -1073741684, 0, -458748, -1073741684, 0, -458747, -1073741684, 0, -458746, -1073741684, 0, -458745, -1073741684, 0, -458744, -1073741684, 0, -458743, -1073741684, 0, -327705, 281, 0, -327690, -1073741684, 0, -327689, -1073741684, 0, -327688, -1073741684, 0, -327687, -1073741684, 0, -327686, -1073741684, 0, -327685, -1073741684, 0, -327684, -1073741684, 0, -327683, -1073741684, 0, -327682, -1073741684, 0, -327681, -1073741684, 0, -393216, -1073741684, 0, -393215, -1073741684, 0, -393214, -1073741684, 0, -393213, -1073741684, 0, -393212, -1073741684, 0, -393211, -1073741684, 0, -393210, -1073741684, 0, -393209, -1073741684, 0, -393208, -1073741684, 0, -393207, -1073741684, 0, -262154, -1073741684, 0, -262153, -1073741684, 0, -262152, -1073741684, 0, -262151, -1073741684, 0, -262150, -1073741684, 0, -262149, -1073741684, 0, -262148, -1073741684, 0, -262147, -1073741684, 0, -262146, -1073741684, 0, -262145, -1073741684, 0, -327680, -1073741684, 0, -327679, -1073741684, 0, -327678, -1073741684, 0, -327677, -1073741684, 0, -327676, -1073741684, 0, -327675, -1073741684, 0, -327674, -1073741684, 0, -327673, -1073741684, 0, -327672, -1073741684, 0, -327671, -1073741684, 0, -196618, -1073741684, 0, -196617, -1073741684, 0, -196616, -1073741684, 0, -196615, -1073741684, 0, -196614, -1073741684, 0, -196613, -1073741684, 0, -196612, -1073741684, 0, -196611, -1073741684, 0, -196610, -1073741684, 0, -196609, -1073741684, 0, -262144, -1073741684, 0, -262143, -1073741684, 0, -262142, -1073741684, 0, -262141, -1073741684, 0, -262140, -1073741684, 0, -262139, -1073741684, 0, -262138, -1073741684, 0, -262137, -1073741684, 0, -262136, -1073741684, 0, -262135, -1073741684, 0, -131082, -1073741684, 0, -131081, -1073741684, 0, -131080, -1073741684, 0, -131079, -1073741684, 0, -131078, -1073741684, 0, -131077, -1073741684, 0, -131076, -1073741684, 0, -131075, -1073741684, 0, -131074, -1073741684, 0, -131073, -1073741684, 0, -196608, -1073741684, 0, -196607, -1073741684, 0, -196606, -1073741684, 0, -196605, -1073741684, 0, -196604, -1073741684, 0, -196603, -1073741684, 0, -196602, -1073741684, 0, -196601, -1073741684, 0, -196600, -1073741684, 0, -196599, -1073741684, 0, -65546, -1073741684, 0, -65545, -1073741684, 0, -65544, -1073741684, 0, -65543, -1073741684, 0, -65542, -1073741684, 0, -65541, -1073741684, 0, -65540, -1073741684, 0, -65539, -1073741684, 0, -65538, -1073741684, 0, -65537, -1073741684, 0, -131072, -1073741684, 0, -131071, -1073741684, 0, -131070, -1073741684, 0, -131069, -1073741684, 0, -131068, -1073741684, 0, -131067, -1073741684, 0, -131066, -1073741684, 0, -131065, -1073741684, 0, -131064, -1073741684, 0, -131063, -1073741684, 0, -10, -1073741684, 0, -9, -1073741684, 0, -8, -1073741684, 0, -7, -1073741684, 0, -6, -1073741684, 0, -5, -1073741684, 0, -4, -1073741684, 0, -3, -1073741684, 0, -2, -1073741684, 0, -1, -1073741684, 0, -65536, -1073741684, 0, -65535, -1073741684, 0, -65534, -1073741684, 0, -65533, -1073741684, 0, -65532, -1073741684, 0, -65531, -1073741684, 0, -65530, -1073741684, 0, -65529, -1073741684, 0, -65528, -1073741684, 0, -65527, -1073741684, 0, 65526, -1073741684, 0, 65527, -1073741684, 0, 65528, -1073741684, 0, 65529, -1073741684, 0, 65530, -1073741684, 0, 65531, -1073741684, 0, 65532, -1073741684, 0, 65533, -1073741684, 0, 65534, -1073741684, 0, 65535, -1073741684, 0, 0, -1073741684, 0, 1, -1073741684, 0, 2, -1073741684, 0, 3, -1073741684, 0, 4, -1073741684, 0, 5, -1073741684, 0, 6, -1073741684, 0, 7, -1073741684, 0, 8, -1073741684, 0, 9, -1073741684, 0, 131062, -1073741684, 0, 131063, -1073741684, 0, 131064, -1073741684, 0, 131065, -1073741684, 0, 131066, -1073741684, 0, 131067, -1073741684, 0, 131068, -1073741684, 0, 131069, -1073741684, 0, 131070, -1073741684, 0, 131071, -1073741684, 0, 65536, -1073741684, 0, 65537, -1073741684, 0, 65538, -1073741684, 0, 65539, -1073741684, 0, 65540, -1073741684, 0, 65541, -1073741684, 0, 65542, -1073741684, 0, 65543, -1073741684, 0, 65544, -1073741684, 0, 65545, -1073741684, 0, 196598, -1073741684, 0, 196599, -1073741684, 0, 196600, -1073741684, 0, 196601, -1073741684, 0, 196602, -1073741684, 0, 196603, -1073741684, 0, 196604, -1073741684, 0, 196605, -1073741684, 0, 196606, -1073741684, 0, 196607, -1073741684, 0, 131072, -1073741684, 0, 131073, -1073741684, 0, 131074, -1073741684, 0, 131075, -1073741684, 0, 131076, -1073741684, 0, 131077, -1073741684, 0, 131078, -1073741684, 0, 131079, -1073741684, 0, 131080, -1073741684, 0, 131081, -1073741684, 0, 262134, -1073741684, 0, 262135, -1073741684, 0, 262136, -1073741684, 0, 262137, -1073741684, 0, 262138, -1073741684, 0, 262139, -1073741684, 0, 262140, -1073741684, 0, 262141, -1073741684, 0, 262142, -1073741684, 0, 262143, -1073741684, 0, 196608, -1073741684, 0, 196609, -1073741684, 0, 196610, -1073741684, 0, 196611, -1073741684, 0, 196612, -1073741684, 0, 196613, -1073741684, 0, 196614, -1073741684, 0, 196615, -1073741684, 0, 196616, -1073741684, 0, 196617, -1073741684, 0, 327670, -1073741684, 0, 327671, -1073741684, 0, 327672, -1073741684, 0, 327673, -1073741684, 0, 327674, -1073741684, 0, 327675, -1073741684, 0, 327676, -1073741684, 0, 327677, -1073741684, 0, 327678, -1073741684, 0, 327679, -1073741684, 0, 262144, -1073741684, 0, 262145, -1073741684, 0, 262146, -1073741684, 0, 262147, -1073741684, 0, 262148, -1073741684, 0, 262149, -1073741684, 0, 262150, -1073741684, 0, 262151, -1073741684, 0, 262152, -1073741684, 0, 262153, -1073741684, 0, 393206, -1073741684, 0, 393207, -1073741684, 0, 393208, -1073741684, 0, 393209, -1073741684, 0, 393210, -1073741684, 0, 393211, -1073741684, 0, 393212, -1073741684, 0, 393213, -1073741684, 0, 393214, -1073741684, 0, 393215, -1073741684, 0, 327680, -1073741684, 0, 327681, -1073741684, 0, 327682, -1073741684, 0, 327683, -1073741684, 0, 327684, -1073741684, 0, 327685, -1073741684, 0, 327686, -1073741684, 0, 327687, -1073741684, 0, 327688, -1073741684, 0, 327689, -1073741684, 0, 458742, -1073741684, 0, 458743, -1073741684, 0, 458744, -1073741684, 0, 458745, -1073741684, 0, 458746, -1073741684, 0, 458747, -1073741684, 0, 458748, -1073741684, 0, 458749, -1073741684, 0, 458750, -1073741684, 0, 458751, -1073741684, 0, 393216, -1073741684, 0, 393217, -1073741684, 0, 393218, -1073741684, 0, 393219, -1073741684, 0, 393220, -1073741684, 0, 393221, -1073741684, 0, 393222, -1073741684, 0, 393223, -1073741684, 0, 393224, -1073741684, 0, 393225, -1073741684, 0, 524278, -1073741684, 0, 524279, -1073741684, 0, 524280, -1073741684, 0, 524281, -1073741684, 0, 524282, -1073741684, 0, 524283, -1073741684, 0, 524284, -1073741684, 0, 524285, -1073741684, 0, 524286, -1073741684, 0, 524287, -1073741684, 0, 458752, -1073741684, 0, 458753, -1073741684, 0, 458754, -1073741684, 0, 458755, -1073741684, 0, 458756, -1073741684, 0, 458757, -1073741684, 0, 458758, -1073741684, 0, 458759, -1073741684, 0, 458760, -1073741684, 0, 458761, -1073741684, 0, 589814, -1073741684, 0, 589815, -1073741684, 0, 589816, -1073741684, 0, 589817, -1073741684, 0, 589818, -1073741684, 0, 589819, -1073741684, 0, 589820, -1073741684, 0, 589821, -1073741684, 0, 589822, -1073741684, 0, 589823, -1073741684, 0, 524288, -1073741684, 0, 524289, -1073741684, 0, 524290, -1073741684, 0, 524291, -1073741684, 0, 524292, -1073741684, 0, 524293, -1073741684, 0, 524294, -1073741684, 0, 524295, -1073741684, 0, 524296, -1073741684, 0, 524297, -1073741684, 0, 655350, -1073741684, 0, 655351, -1073741684, 0, 655352, -1073741684, 0, 655353, -1073741684, 0, 655354, -1073741684, 0, 655355, -1073741684, 0, 655356, -1073741684, 0, 655357, -1073741684, 0, 655358, -1073741684, 0, 655359, -1073741684, 0, 589824, -1073741684, 0, 589825, -1073741684, 0, 589826, -1073741684, 0, 589827, -1073741684, 0, 589828, -1073741684, 0, 589829, -1073741684, 0, 589830, -1073741684, 0, 589831, -1073741684, 0, 589832, -1073741684, 0, 589833, -1073741684, 0 )

[node name="accion" type="TouchScreenButton" parent="Controles"]
position = Vector2( 104, 74.6667 )
scale = Vector2( 0.9, 0.9 )
normal = ExtResource( 1 )
pressed = ExtResource( 3 )
shape_centered = false
action = "tecla_X"
